--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,43 @@
 
 server {
     listen 80;
-    server_name at0m.local;;
+    server_name at0m;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
     server_name at0m.local;
-    root /var/www/redirect_page;
+    root /var/www/html;
 
-    ssl_certificates /etc/nginx/ssl/server.pem
-    ssl_certificates_key /etc/nginx/ssl/server.key
+    ssl_certificate /etc/nginx/ssl/server.pem;
+    ssl_certificate_key /etc/nginx/ssl/server.key;
 
     location / {
-        index index.html
+        index index.html;
     }
 
     location /grafana {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass 127.0.0.1:3000/;
     }
 
+#    location /grafana/api/live {
+#        proxy_http_version 1.1;
+#        proxy_set_header Upgrade $http_upgrade;
+#        proxy_set_header Connection "Upgrade";
+#        proxy_set_header Host $http_host;
+        #rewrite ^/grafana/(.*) /$1 break;
+        #proxy_set_header Host $host;
+#        proxy_pass 127.0.0.1:3000/;
+#    }
+
     location /prometheus {
-        proxy_pass http://127.0.0.1:9090;
+        proxy_pass 127.0.0.1:9090/;
+    }
+
+    location /nginx_status {
+        stub_status;
+        allow 127.0.0.1;	#only allow requests from localhost
+        deny all;           #deny all other hosts
     }
 }
