[FIX] nginx config and docker-compose file

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -24,9 +24,12 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention.time=500h' # 20 Days
       - '--web.enable-lifecycle'
+      - '--web.external-url=/prometheus/'
     restart: unless-stopped
     expose:
       - 9090
+    ports:
+      - 127.0.0.1:9090:9090
     networks:
       - monitor-net
       - frontend-net
@@ -39,10 +42,10 @@ services:
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana:/etc/grafana/
-    environment:
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false
+    env_file:
+      - ./grafana/config.grafana
+    depends_on:
+      - prometheus
     restart: unless-stopped
     ports:
       - 127.0.0.1:3000:3000
@@ -63,6 +66,8 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    depends_on:
+      - prometheus
     restart: unless-stopped
     expose:
       - 9100
@@ -83,6 +88,8 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
+    depends_on:
+      - prometheus
     restart: unless-stopped
     expose:
       - 8080
