--- a/main.yml
+++ b/main.yml
@@ -8,13 +8,13 @@
   vars_files:
     - vars.yml
 
-  pre_tasks:
-    - name: Run Update
-      apt:
-        upgrade: true
-        update_cache: yes
-      ignore_errors: yes
-      become: yes
+  #pre_tasks:
+  #  - name: Run Update
+  #    apt:
+  #      upgrade: true
+  #      update_cache: yes
+  #    ignore_errors: yes
+  #    become: yes
 
   post_tasks:
     - name: Run autoremove
@@ -23,18 +23,17 @@
       become: yes
 
   handlers:
-    - name: Include handlers.
+    - name: Include handlers
       import_tasks: tasks/handlers.yml
 
   tasks:
     #- name: Install Packages
     #  import_tasks: tasks/install-pkgs.yml
 
-    - name: Setup Nginx Proxy
-      import_tasks: tasks/nginx.yml
+    #- name: Setup Nginx Proxy
+    #  import_tasks: tasks/nginx.yml
 
     #- name: Setup Docker
     #  import_tasks: tasks/docker.yml
-
     - name: Setup Monitoring
       import_tasks: tasks/monitoring.yml
