--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,22 +17,22 @@ server {
         index index.html;
     }
 
-    location /grafana {
-        proxy_pass 127.0.0.1:3000/;
+    location /grafana/ {
+        proxy_pass http://127.0.0.1:3000/;
+        proxy_set_header Host $host;
     }
 
-#    location /grafana/api/live {
-#        proxy_http_version 1.1;
-#        proxy_set_header Upgrade $http_upgrade;
-#        proxy_set_header Connection "Upgrade";
-#        proxy_set_header Host $http_host;
-        #rewrite ^/grafana/(.*) /$1 break;
-        #proxy_set_header Host $host;
-#        proxy_pass 127.0.0.1:3000/;
-#    }
+    location /grafana/api/live {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:3000/;
+    }
 
-    location /prometheus {
-        proxy_pass 127.0.0.1:9090/;
+    location /prometheus/ {
+        proxy_pass http://127.0.0.1:9090/prometheus/;
+        proxy_set_header Host $host;
     }
 
     location /nginx_status {
