--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -1,13 +1,5 @@
 ---
-- name: Create user 'mon'
-  user:
-    name: mon
-    shell: /bin/false
-    groups: docker
-    create_home: no
-    append: yes
-
-- name: Synchronize internet-monitoring directory.
+- name: Synchronize monitoring directory.
   synchronize:
     src: monitoring/
     dest: "/opt/monitoring/"
@@ -15,7 +7,7 @@
     recursive: true
     perms: false
 
-- name: Ensure internet-monitoring environment is running.
+- name: Ensure monitoring environment is running.
   docker_compose:
     project_src: "/opt/monitoring/"
     build: false
