--- a/tasks/install-pkgs.yml
+++ b/tasks/install-pkgs.yml
@@ -28,3 +28,13 @@
 - name: Install nordvpn
   shell: "/tmp/install.sh > /tmp/nordvpn-install.log"
   become: yes
+
+# https://github.com/FideliusFalcon/Bettercap-Install-Raspberry-Pi-
+- name: Build bettercap
+  shell: |
+    export GOPATH=$HOME/go  
+    export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+    go get github.com/bettercap/bettercap
+    cd $GOPATH/src/github.com/bettercap/bettercap
+    make build  
+    sudo make install
