--- a/vars.yml
+++ b/vars.yml
@@ -41,6 +41,14 @@ pkgs:
   - "yersinia"
   - "kismet"
   - "transmission-cli"
+  - "libpcap-dev"
+  - "libusb-1.0-0"
+  - "libnetfilter-queue-dev"
+  - "build-essential"
+  - "golang"
+  - "gettext"
+  - "dhcpcd5"
+  - "isc-dhcp-server"
 
 pip_pkgs:
   - "requests"
@@ -48,6 +56,7 @@ pip_pkgs:
   - "ansible"
 
 nordvpn_script: "https://downloads.nordcdn.com/apps/linux/install.sh"
+bettercap_rel_link: "https://github.com/bettercap/bettercap/releases/download/v2.31.1/bettercap_linux_armhf_v2.31.1.zip"
 
 docker:
   repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_lsb['codename'] }} stable"
