--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,7 +47,7 @@ server {
         proxy_buffers 8 32k;
         proxy_buffer_size 64k;
 
-        client_max_body_size 75M;
+        client_max_body_size 1G;
 
         # redirect all HTTP traffic to localhost:8088;
         proxy_pass http://localhost:8081;
