[ADD] Homer and single docker-compose file

--- a/tasks/homer.yml
+++ b/tasks/homer.yml
@@ -1,8 +1,8 @@
 ---
-- name: Synchronize monitoring directory.
+- name: Synchronize homer directory.
   synchronize:
     src: monitoring/
-    dest: "/opt/monitoring/"
+    dest: "/opt/homer/"
     delete: false
     recursive: true
     perms: false
