--- a/archives/default.conf
+++ b/archives/default.conf
@@ -1,31 +1,16 @@
-
 server {
     listen 80;
-    server_name atom;
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name atom;
+    server_name _;
     root /var/www/html;
 
-    ssl_certificate /etc/nginx/ssl/server.pem;
-    ssl_certificate_key /etc/nginx/ssl/server.key;
-
-    set $my_host $http_host;
-    if ($http_host = "atom.local") {
-        set $my_host "atom";
-    }
 
     location / {
-        proxy_pass http://homer:8080/;
-        proxy_set_header Host $my_host;
+        index http://127.0.0.1:8080/;
     }
 
     location /grafana/ {
-        proxy_pass http://grafana:3000/;
-        proxy_set_header Host $my_host;
+        proxy_pass http://127.0.0.1:3000/;
+        proxy_set_header Host $host;
     }
 
     location /grafana/api/live {
@@ -33,18 +18,18 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $http_host;
-        proxy_pass http://grafana:3000/;
+        proxy_pass http://127.0.0.1:3000/;
     }
 
     location /prometheus/ {
-        proxy_pass http://prometheus:9090/prometheus/;
-        proxy_set_header Host $my_host;
+        proxy_pass http://127.0.0.1:9090/prometheus/;
+        proxy_set_header Host $host;
     }
 
     location /nginx_status {
         stub_status;
         allow 127.0.0.1;	#only allow requests from localhost
-        deny all;           #deny all other hosts
+        deny all; #deny all other hosts
     }
 
     location /filebrowser {
