--- a/main.yml
+++ b/main.yml
@@ -1,5 +1,5 @@
 # Author: Veerendra Kakumanu
-# Description: An Ansible playbook to necessary packages on my RPi4
+# Description: An Ansible playbook to install necessary packages on my RPi4
 
 - name: Init My RPi4
   hosts: all
@@ -8,25 +8,19 @@
   vars_files:
     - vars.yml
 
-  #pre_tasks:
-  #  - name: Run Update
-  #    apt:
-  #      upgrade: true
-  #      update_cache: yes
-  #    ignore_errors: yes
-  #    become: yes
+  pre_tasks:
+    - name: Run Update
+      apt:
+        upgrade: true
+        update_cache: yes
+      ignore_errors: yes
+      become: yes
 
-  #  post_tasks:
-  #    - name: Remove packages
-  #      apt:
-  #        name:
-  #          - golang
-  #        state: absent
-  #
-  #    - name: Run autoremove
-  #      apt:
-  #        autoremove: yes
-  #      become: yes
+  post_tasks:
+    - name: Run autoremove
+      apt:
+        autoremove: yes
+      become: yes
 
   handlers:
     - name: Include handlers
@@ -36,12 +30,14 @@
     #- name: Install Packages
     #  import_tasks: tasks/install-pkgs.yml
 
-    #- name: Setup Nginx Proxy
-    #  import_tasks: tasks/nginx.yml
+    #    - name: Setup Nginx Proxy
+    #      import_tasks: tasks/nginx.yml
 
-    #- name: Setup Docker
-    #  import_tasks: tasks/docker.yml
-    #- name: Setup Monitoring
-    #  import_tasks: tasks/monitoring.yml
-#    - name: Setup filebrowser server
-#      import_tasks: tasks/filebrowser.yml
+    - name: Setup Docker
+      import_tasks: tasks/docker.yml
+
+    - name: Setup Monitoring
+      import_tasks: tasks/monitoring.yml
+
+    - name: Setup filebrowser server
+      import_tasks: tasks/filebrowser.yml
