16 Setup homer and restruct dir

--- a/homer/assets/config.yml
+++ b/homer/assets/config.yml
@@ -52,20 +52,15 @@ services:
         logo: "assets/tools/grafana.png"
         subtitle: "Grafana Dashbord"
         tag: "app"
-        url: "https://www.reddit.com/r/selfhosted/"
+        url: "http://atom/grafana"
         target: "_blank"
       - name: "Prometheus"
         logo: "assets/tools/prometheus.png"
         subtitle: "Prometheus Dashboard"
         tag: "app"
-        url: "#"
+        url: "http://atom/prometheus"
       - name: "File Browser"
         logo: "assets/tools/filebrowser.png"
         subtitle: "File Browser"
         tag: "app"
-        url: "#"
-      - name: "Bittorrent"
-        logo: "assets/tools/qbittorrent.png"
-        subtitle: "Bittorrent Web Client with NordVPN"
-        tag: "app"
-        url: "#"
+        url: "http://atom/filebrowser"
