--- a/main.yml
+++ b/main.yml
@@ -8,36 +8,39 @@
   vars_files:
     - vars.yml
 
-  pre_tasks:
-    - name: Run Update
-      apt:
-        upgrade: true
-        update_cache: yes
-      ignore_errors: yes
-      become: yes
+  # pre_tasks:
+  #   - name: Run Update
+  #     apt:
+  #       upgrade: true
+  #       update_cache: yes
+  #     ignore_errors: yes
+  #     become: yes
 
-  post_tasks:
-    - name: Run autoremove
-      apt:
-        autoremove: yes
-      become: yes
+  # post_tasks:
+  #   - name: Run autoremove
+  #     apt:
+  #       autoremove: yes
+  #     become: yes
 
-  handlers:
-    - name: Include handlers
-      import_tasks: tasks/handlers.yml
+  # handlers:
+  #   - name: Include handlers
+  #     import_tasks: tasks/handlers.yml
 
   tasks:
-    #- name: Install Packages
-    #  import_tasks: tasks/install-pkgs.yml
+    # - name: Install Packages
+    #   import_tasks: tasks/install-pkgs.yml
 
-    #    - name: Setup Nginx Proxy
-    #      import_tasks: tasks/nginx.yml
+    # - name: Setup Docker
+    #   import_tasks: tasks/docker.yml
 
-    - name: Setup Docker
-      import_tasks: tasks/docker.yml
+    # - name: Setup Monitoring
+    #   import_tasks: tasks/monitoring.yml
 
-    - name: Setup Monitoring
-      import_tasks: tasks/monitoring.yml
+    # - name: Setup File Browser Server
+    #   import_tasks: tasks/filebrowser.yml
 
-    - name: Setup filebrowser server
-      import_tasks: tasks/filebrowser.yml
+    - name: Setup Homer
+      import_tasks: tasks/homer.yml
+
+    # - name: Setup Nginx Proxy
+    #   import_tasks: tasks/nginx.yml
