--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,27 +8,24 @@ server {
 server {
     listen 443 ssl;
     server_name atom;
-    root /var/www/html;
+    #root /var/www/html;
 
     ssl_certificate /etc/nginx/ssl/server.pem;
     ssl_certificate_key /etc/nginx/ssl/server.key;
 
-    set $my_host $http_host;
-    if ($http_host = "atom.local") {
-        set $my_host "atom";
-    }
-
     location / {
         proxy_pass http://homer:8080/;
-        proxy_set_header Host $my_host;
+        proxy_set_header Host $http_host;
     }
 
     location /grafana/ {
+        rewrite ^/grafana/(.*) /$1 break;
         proxy_pass http://grafana:3000/;
-        proxy_set_header Host $my_host;
+        proxy_set_header Host $http_host;
     }
 
     location /grafana/api/live {
+        rewrite ^/grafana/(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -38,13 +35,13 @@ server {
 
     location /prometheus/ {
         proxy_pass http://prometheus:9090/prometheus/;
-        proxy_set_header Host $my_host;
+        proxy_set_header Host $http_host;
     }
 
     location /nginx_status {
         stub_status;
-        allow 127.0.0.1;	#only allow requests from localhost
-        deny all;           #deny all other hosts
+        #allow 127.0.0.1;	    #only allow requests from localhost
+        #deny all;              #deny all other hosts
     }
 
     location /filebrowser {
@@ -56,11 +53,11 @@ server {
         client_max_body_size 1G;
 
         # redirect all HTTP traffic to localhost:8088;
-        proxy_pass http://localhost:8081;
+        proxy_pass http://filebrowser:8080;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #proxy_set_header X-NginX-Proxy true;
+        proxy_set_header X-NginX-Proxy true;
 
         # enables WS support
         proxy_http_version 1.1;
