--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -1,12 +1,12 @@
 ---
 # Courtesy https://github.com/geerlingguy/ansible-role-docker_arm/blob/master/tasks/main.yml
-- name: Download Docker install convenience script.
+- name: Download Docker install convenience script
   get_url:
     url: https://get.docker.com/
     dest: /tmp/get-docker.sh
     mode: 0775
 
-- name: Run Docker install convenience script.
+- name: Run Docker install convenience script
   command: /tmp/get-docker.sh
   environment:
     CHANNEL: stable
@@ -17,15 +17,15 @@
     state: started
     enabled: true
 
-- name: Install Docker Compose using Pip.
+- name: Install docker-compose using pip
   pip:
     name: docker-compose
     state: present
     executable: "pip3"
 
-- name: Ensure docker users are added to the docker group.
+- name: Ensure docker users are added to the docker group
   user:
     name: "{{ ansible_env.USER }}"
     groups: docker
     append: true
-  become: yes
+  become: true
