--- a/tasks/install-pkgs.yml
+++ b/tasks/install-pkgs.yml
@@ -4,12 +4,17 @@
     name: "{{ pkgs }}"
     state: latest
     update_cache: yes
-  become: yes
+  become: true
+
+- name: Install Snap Packages
+  snap:
+    name: "{{ snaps }}"
+    classic: yes
 
 - name: Install Python Packges
   pip:
     name: "{{ pip_pkgs }}"
-  become: yes
+  become: true
 
 - name: Download tools/scripts
   get_url:
@@ -17,24 +22,20 @@
     dest: "/usr/local/bin/"
     mode: "0766"
   loop: "{{ lookup('dict', tools) }}"
-  become: yes
+  become: true
 
-- name: Download nordvpn install script
+- name: Download dotfiles install script
   get_url:
-    url: "{{ nordvpn_script }}"
-    dest: "/tmp/install.sh"
-    mode: "0766"
+    url: https://raw.githubusercontent.com/veerendra2/dotfiles/master/install.sh
+    dest: /tmp/install-dotfiles.sh
+    mode: 0775
 
-- name: Install nordvpn
-  shell: "/tmp/install.sh > /tmp/nordvpn-install.log"
-  become: yes
-
+- name: Run dotfiles install script
+  command: /tmp/install-dotfiles.sh
 # https://github.com/FideliusFalcon/Bettercap-Install-Raspberry-Pi-
-- name: Build bettercap
-  shell: |
-    export GOPATH=$HOME/go  
-    export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
-    go get github.com/bettercap/bettercap
-    cd $GOPATH/src/github.com/bettercap/bettercap
-    make build  
-    sudo make install
+#- name: Build bettercap
+#  shell: |
+#    export GOPATH=$HOME/go
+#    export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
+#    go get github.com/bettercap/bettercap
+#    cd $GOPATH/src/github.com/bettercap/bettercap && make build && sudo make install
