Change URLs in homer

--- a/homer/assets/config.yml
+++ b/homer/assets/config.yml
@@ -52,15 +52,15 @@ services:
         logo: "assets/tools/grafana.png"
         subtitle: "Grafana Dashbord"
         tag: "app"
-        url: "http://atom/grafana"
+        url: "/grafana"
         target: "_blank"
       - name: "Prometheus"
         logo: "assets/tools/prometheus.png"
         subtitle: "Prometheus Dashboard"
         tag: "app"
-        url: "http://atom/prometheus"
+        url: "/prometheus"
       - name: "File Browser"
         logo: "assets/tools/filebrowser.png"
         subtitle: "File Browser"
         tag: "app"
-        url: "http://atom/filebrowser"
+        url: "/filebrowser"
