--- a/vars.yml
+++ b/vars.yml
@@ -55,7 +55,7 @@ pip_pkgs:
   - "beautifulsoup4"
   - "ansible"
 
-nordvpn_script: "https://downloads.nordcdn.com/apps/linux/install.sh"
+# nordvpn_script: "https://downloads.nordcdn.com/apps/linux/install.sh"
 bettercap_rel_link: "https://github.com/bettercap/bettercap/releases/download/v2.31.1/bettercap_linux_armhf_v2.31.1.zip"
 
 tools:
