--- a/tasks/install-pkgs.yml
+++ b/tasks/install-pkgs.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Necessary Packges
+- name: Install necessary packges
   apt:
     name: "{{ pkgs }}"
     state: latest
@@ -11,7 +11,24 @@
     name: "{{ snaps }}"
     classic: yes
 
-- name: Install Python Packges
+- name: Create ngrok config directory /opt/ngrok
+  file:
+    path: /opt/ngrok
+    state: directory
+
+- name: Copy systemd unit file
+  copy:
+    src: files/ngrok.service
+    dest: /lib/systemd/system
+
+- name: start ngrok daemon
+  systemd:
+    name: ngrok
+    enabled: true
+    state: started
+  ignore_errors: true
+
+- name: Install Python packges
   pip:
     name: "{{ pip_pkgs }}"
   become: true
@@ -32,10 +49,33 @@
 
 - name: Run dotfiles install script
   command: /tmp/install-dotfiles.sh
-# https://github.com/FideliusFalcon/Bettercap-Install-Raspberry-Pi-
-#- name: Build bettercap
-#  shell: |
-#    export GOPATH=$HOME/go
-#    export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
-#    go get github.com/bettercap/bettercap
-#    cd $GOPATH/src/github.com/bettercap/bettercap && make build && sudo make install
+
+- name: Download Docker install convenience script
+  get_url:
+    url: https://get.docker.com/
+    dest: /tmp/get-docker.sh
+    mode: 0775
+
+- name: Run Docker install convenience script
+  command: /tmp/get-docker.sh
+  environment:
+    CHANNEL: stable
+
+- name: Ensure Docker is started.
+  service:
+    name: docker
+    state: started
+    enabled: true
+
+- name: Install docker-compose using pip
+  pip:
+    name: docker-compose
+    state: present
+    executable: "pip3"
+
+- name: Ensure docker users are added to the docker group
+  user:
+    name: "{{ ansible_env.USER }}"
+    groups: docker
+    append: true
+  become: true
